/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// A set of Private Commands to send to a TVInputService.Session, in particular
// support new features on older devices. NOTE: this proto is internal to this
// package and should not be used outside it.

syntax = "proto3";

package android.tv.common.compat.internal;

option java_outer_classname = "Commands";
option java_package = "com.android.tv.common.compat.internal";

// Wraps messages for sending to a session a private command.
message PrivateCommand {
  uint32 compat_version = 1;

  oneof command {
    OnDevMessage on_dev_message = 2;
  }
}

// Sends a debug message to the session for display on dev builds only
message OnDevMessage {
  string message = 1;
}
