/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// A set of Session events to send from a TVInputService.Session, in particular
// support new features on older devices. NOTE: this proto is internal to this
// package and should not be used outside it.
syntax = "proto3";

package android.tv.common.compat.internal;

option java_outer_classname = "Events";
option java_package = "com.android.tv.common.compat.internal";

// Wraps messages for sending from a session as an Event.
message SessionEvent {
  uint32 compat_version = 1;

  oneof event {
    NotifyDevToast notify_dev_message = 2;
    NotifySignalStrength notify_signal_strength = 3;
  }
}

// Send a message to the application to be displayed as a toast on dev builds
// only
message NotifyDevToast {
  string message = 1;
}

// Notifies the TV Application the current signal strength.
message NotifySignalStrength {
  // The signal strength as a percent (0 to 100),
  // with -1 meaning unknown, -2 meaning not used.
  int32 signal_strength = 1;
}
